--- a/client/src/index.css
+++ b/client/src/index.css
@@ -75,3 +75,29 @@ body {
   color: red;
   text-align: center;
 }
+
+.delete-button {
+  position: absolute;
+  top: 25px;
+  right: 90px;
+  border: 1px solid grey;
+  padding: 5px 10px;
+  background-color: lightseagreen;
+}
+.delete-button:hover {
+  background-color: green;
+  color: white;
+}
+
+.edit-button {
+  position: absolute;
+  top: 25px;
+  right: 165px;
+  border: 1px solid grey;
+  padding: 5px 10px;
+  background-color: lightseagreen;
+}
+.edit-button:hover {
+  background-color: green;
+  color: white;
+}
